[gd_scene load_steps=6 format=2]

[ext_resource path="res://scripts/player.gd" type="Script" id=1]
[ext_resource path="res://assets/images/icon.png" type="Texture" id=2]
[ext_resource path="res://scripts/hand.gd" type="Script" id=3]

[sub_resource type="CapsuleShape" id=2]

[sub_resource type="SphereShape" id=3]
radius = 2.38199

[node name="Player" type="KinematicBody"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.5, 0 )
script = ExtResource( 1 )

[node name="CollisionShape" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0 )
shape = SubResource( 2 )

[node name="DebugVisual" type="CSGSphere" parent="."]
transform = Transform( 1, 0, 0, 0, 1.5, 0, 0, 0, 1, 0, 0, 0 )

[node name="RotationHelper" type="Spatial" parent="."]

[node name="Camera" type="Camera" parent="RotationHelper"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.05159, -0.193112 )
current = true

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="LeftHand" type="Node2D" parent="CanvasLayer"]
script = ExtResource( 3 )

[node name="Hand" type="Sprite" parent="CanvasLayer/LeftHand"]
position = Vector2( 253, 526 )
rotation = 0.450621
scale = Vector2( 1.24503, 3.38622 )
texture = ExtResource( 2 )

[node name="Holdable" type="Sprite" parent="CanvasLayer/LeftHand"]
position = Vector2( 283, 335 )
rotation = -0.850677
scale = Vector2( 2, 2 )
z_index = -1

[node name="RightHand" type="Node2D" parent="CanvasLayer"]
script = ExtResource( 3 )

[node name="Hand" type="Sprite" parent="CanvasLayer/RightHand"]
position = Vector2( 785, 523 )
rotation = -0.464225
scale = Vector2( 1.24503, 3.38622 )
texture = ExtResource( 2 )

[node name="Holdable" type="Sprite" parent="CanvasLayer/RightHand"]
position = Vector2( 766, 331 )
rotation = -0.684805
scale = Vector2( 2, 2 )
z_index = -1

[node name="PickupArea" type="Area" parent="."]

[node name="CollisionShape" type="CollisionShape" parent="PickupArea"]
shape = SubResource( 3 )

[connection signal="body_entered" from="PickupArea" to="." method="_on_PickupArea_body_entered"]
